deployment/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kic
  name: kic-frontend-service
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: kic-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kic
  name: kic-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kic-frontend
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: kic
      labels:
        app: kic-frontend
    spec:
      containers:
        - image: gcr.io/PROJECT_ID/IMAGE:TAG
          name: kic-frontend
          ports:
            - containerPort: 80
