deployment/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: kic
  name: kic-frontend-virtual-service
spec:
  hosts:
    - "keeping-it-casual.com"
  gateways:
    - kic-gateway
  http:
      - route:
        - destination:
            host: kic-frontend-service
            port:
              number: 80
